@@ -1,3 +1,9 @@
+### March xx 2021, Release version 0.10.0 ###
+
+  * ADDED:
+    * OpenWeather has been added as a weather forecast provider.
+
+
 ### March 2 2021, Release version 0.9.3 ###
 
   * ADDED:
